--- a/workspace_spring/Shop/src/main/frontend/src/App.css
+++ b/workspace_spring/Shop/src/main/frontend/src/App.css
@@ -9,7 +9,7 @@
 .login-div{
   width: 100%;
   color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
+  background-color:#C2AA9C;
 }
 
 /* 로그인과 조인 글자 */
@@ -17,8 +17,11 @@
   display: flex;
   justify-content: right;
   gap: 20px;
-  font-size: 16px;
+  font-size: 15px;
   margin-right: 25px;
+  text-align: center;
+  padding: 10px;
+  
 }
 
 .header > span:hover{
@@ -28,9 +31,9 @@
 /* 배너 이미지 */
 .banner-img{
   width: 100%;
-  height: 200px;
+  height: 500px;
   object-fit:cover ;
-  object-position:center;
+  object-position:bottom;
   display: block;
 }
 
@@ -139,4 +142,25 @@ input:focus, select:focus{
   padding: 5px;
 }
 
-/* 모달 애니메이션 정의 */
+/* feedback */
+
+.feedback{
+  font-size: 0.7rem;
+  margin-left: 5px;
+  visibility: hidden;
+}
+
+.feedback.error {
+  color: red;
+  visibility: visible;
+}
+.feedback.good {
+  color: green;
+  visibility: visible;
+}
+
+.memName-span{
+  color: rgb(78, 22, 0);
+  font-size: 1.2rem;
+  font-weight: bold;
+}
