--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Join.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Join.css
@@ -1,10 +1,12 @@
 
 .joinpage{
+  width: 70%;
+  margin: auto;
   border-radius: 10px;
   border: 1px solid rgb(233, 230, 230);
   padding: 50px 0px;
-  /* background-color: #F6F5F2; */
-  
+  /* background-color: rgb(255, 255, 255); */
+
 }
 
 .jointable, .logintable{
