--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/UserLayout.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/UserLayout.css
@@ -30,7 +30,7 @@
   background-color: rgb(238, 235, 232);
   text-align: left;
   
-  /* visibility: hidden; */
+  visibility: hidden;
 }
 
 .dropMenu-content.on{
