--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Login.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Login.css
@@ -1,10 +1,18 @@
 
 .logintable{
   margin-top: 50px;
+  width: 50%;
+  /* border: 1px solid red; */
+
 }
 
 .logintable input{
-  width: 300px;
+  /* width: 300px; */
+
+  /* 아래는 테스트중 040808 */
+  width: 100%;  
+  /* border: 1px solid red; */
+
 }
 
 .loginbtn-div{
@@ -14,7 +22,10 @@
 
 .login-btn{
   font-size: 18px;
-  border: none;
+  border: 1px solid lightgrey;
   padding: 11px;
-  width: 140px;
+  /* width: 140px; */
+
+    /* 아래는 테스트중 040808 */
+  width: 50%;
 }
