--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Join.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Join.css
@@ -2,11 +2,12 @@
 .joinpage{
   width: 70%;
   margin: auto;
+  /* margin-top: 50px; */
   border-radius: 10px;
   border: 1px solid rgb(233, 230, 230);
   padding: 50px 0px;
   /* background-color: rgb(255, 255, 255); */
-
+  margin-top: 5%;
 }
 
 .jointable, .logintable{
