--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/ItemDetail.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/ItemDetail.css
@@ -20,6 +20,16 @@
   padding: 8px;
   margin-top: 25px;
   border: 1px solid lightgray;
+  margin-right: 15px ;
+}
+
+.detail-intro > div {
+  margin: 10px 0px;
+}
+
+.detail-intro > div > input{
+  width: 100px;
+  margin-left: 10px;
 }
 
 .detail-content > h3{
