--- a/workspace_spring/Board/src/main/frontend/src/reset.css
+++ b/workspace_spring/Board/src/main/frontend/src/reset.css
@@ -9,6 +9,13 @@
 	font-style: normal;
 }
 
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -57,6 +64,8 @@ table {
   box-sizing: border-box;
 	/* font-family: "Noto Sans", sans-serif; */
 	font-family: "MangoByeolbyeol", sans-serif; 
+	font-family: 'Pretendard-Regular';
+
 	/* font-size: 20px; */
 }
 
