--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Join.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Join.css
@@ -1,6 +1,6 @@
 
 .joinpage{
-  width: 80%;
+  width: 82%;
   margin: auto;
   /* margin-top: 50px; */
   border-radius: 10px;
@@ -10,10 +10,12 @@
   margin-top: 5%;
 }
 
+.jointable{
+  width: 87%;
+}
+
 .jointable, .logintable{
   margin: auto;
-  font-size: 1em;
-  width: 100%;
   color: rgb(71, 71, 71);
 }
 
@@ -56,7 +58,7 @@ input{
 
 .jointable button {
   margin-left: 10px;
-  width: 80px;
+  width: 25%;
   padding: 7px;
   border: 1px solid rgb(204, 203, 203);
   color: rgb(88, 82, 82);
@@ -70,5 +72,7 @@ input{
   padding: 10px;
   border: 1px solid lightgray;
   font-size: 18px;
+  width: 40%;
+  margin-top: 5%;
 }
 
