--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Login.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/pages/user/Login.css
@@ -1,19 +1,24 @@
 
-.logintable{
-  margin-top: 50px;
-  width: 50%;
+.joinpage{
+  width: 80%;
+  margin: auto;
+  margin-top: 55px;
+  border-radius: 10px;
+  padding: 50px 0px;
+  border: 1px solid rgb(233, 230, 230);
 }
 
-
+.logintable{
+  margin-top: 50px;
+  width: 60%;
+}
 
 .logintable input{
-  /* width: 300px; */
-  width: 18vw;  
-  /* border: 1px solid red; */
-
+  width: 85%;  
 }
 
 .loginbtn-div{
+  margin: auto;
   margin-top: 50px;
   text-align: center;
 }
@@ -21,9 +26,70 @@
 .login-btn{
   font-size: 18px;
   border: 1px solid lightgrey;
-  padding: 11px;
-  /* width: 140px; */
-
-    /* 아래는 테스트중 040808 */
+  padding: 12px;
   width: 50%;
 }
+
+
+@media (max-width: 768px) {
+
+  .joinpage{
+    width: 100%;
+    margin: auto;
+    margin-top: 50px;
+  }
+
+.logintable{
+  margin-top: 30px;
+  width: 80%;
+}
+
+
+.logintable input{
+  width: 82%;  
+}
+
+.loginbtn-div{
+  margin-top: 30px;
+  text-align: center;
+}
+
+.login-btn{
+  font-size: 18px;
+  border: 1px solid lightgrey;
+  padding: 11px;
+  width: 55%;
+}
+  
+}
+
+@media (max-width: 480px) {
+  .joinpage{
+    width: 100%;
+    margin: auto;
+    margin-top: 50px;
+  }
+
+  .logintable{
+    margin-top: 10px;
+    width: 80%;
+  }
+  
+  
+  .logintable input{
+    width: 100%;  
+  }
+  
+  .loginbtn-div{
+    margin-top: 30px;
+    text-align: center;
+  }
+  
+  .login-btn{
+    font-size: 18px;
+    border: 1px solid lightgrey;
+    padding: 11px;
+    width: 60%;
+  }
+    
+  }
