--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/App.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/App.css
@@ -1,11 +1,12 @@
-
+body{
+font-family:Arial, Helvetica, sans-serif !important;
+}
 
 .container{
   width: 95vw;
   height: 100vh;
   font-size: 17px;
   margin: auto;
-  /* background-color: lightgrey; */
 }
 
 /* 로그인과 조인 글자  */
@@ -68,7 +69,7 @@
 }
 
 .layout-div{
-  width: 64%;
+  width: 85%;
   height: 100%;
   /* border: 1px solid red; */
   margin: 0px auto;
@@ -199,3 +200,65 @@ input:focus, select:focus{
   margin-top: 4px;
 }
 
+
+@media (max-width : 768px) {
+
+  .title-div{
+    font-size: 1.7em;
+  }
+
+  .banner-img{
+    width: 100%;
+    height: 250px;
+  }
+  
+}
+
+
+@media (max-width : 480px) {
+
+  .bookstore > span{
+    font-size: 0.8em;
+  }
+
+  .title-div{
+    font-size: 1.5em;
+  }
+
+  .banner-img{
+    width: 100%;
+    height: 200px;
+  }
+
+  .bi{
+    position: relative; 
+    font-size: 1.5em;
+    margin: 2px 0 0 0;
+    padding: 0px;
+   }
+   
+  
+  .dropMenu{
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    font-size: 0.7em;
+    position: absolute;
+    z-index: 1000;
+    background-color: white;
+    padding: 8px;
+  }
+
+
+
+  .dropMenu li{
+    padding: 4px;
+
+  }
+
+  .dropMenu li:hover{
+    background-color: lightgrey;
+    border-radius: 5px;
+    
+  }
+  
+}
